// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Truncate component should render correctly block clicking on expand toggles to collapse 1`] = `
<Component
  className="ins-c-truncate is-block"
>
  <Component>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </Component>
  <Component>
    <Component
      className="ins-c-collapse-button"
      onClick={[Function]}
      variant="link"
    >
      Custom collapse
    </Component>
  </Component>
</Component>
`;

exports[`Truncate component should render correctly block clicking on expand toggles to collapse 2`] = `
<Component
  className="ins-c-truncate is-block"
>
  <Component>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </Component>
  <Component>
    <Component
      className="ins-c-collapse-button"
      onClick={[Function]}
      variant="link"
    >
      Custom collapse
    </Component>
  </Component>
</Component>
`;

exports[`Truncate component should render correctly block custom button titles 1`] = `
<Component
  className="ins-c-truncate is-block"
>
  <Component>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </Component>
  <Component>
    <Component
      className="ins-c-collapse-button"
      onClick={[Function]}
      variant="link"
    >
      Custom collapse
    </Component>
  </Component>
</Component>
`;

exports[`Truncate component should render correctly block custom button titles 2`] = `
<Component
  className="ins-c-truncate is-block"
>
  <Component>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </Component>
  <Component>
    <Component
      className="ins-c-collapse-button"
      onClick={[Function]}
      variant="link"
    >
      Custom collapse
    </Component>
  </Component>
</Component>
`;

exports[`Truncate component should render correctly block custom expande button 1`] = `
<Component
  className="ins-c-truncate is-block"
>
  <Component>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </Component>
  <Component>
    <Component
      className="ins-c-expand-button"
      onClick={[Function]}
      variant="link"
    >
      Custom expand
    </Component>
  </Component>
</Component>
`;

exports[`Truncate component should render correctly block custom expande button 2`] = `
<Component
  className="ins-c-truncate is-block"
>
  <Component>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </Component>
  <Component>
    <Component
      className="ins-c-expand-button"
      onClick={[Function]}
      variant="link"
    >
      Custom expand
    </Component>
  </Component>
</Component>
`;

exports[`Truncate component should render correctly block when text length is less than user specified length 1`] = `
<Component
  className="ins-c-truncate is-block"
>
  <Component>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </Component>
</Component>
`;

exports[`Truncate component should render correctly block with short length 1`] = `
<Component
  className="ins-c-truncate is-block"
>
  <Component>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lo...",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </Component>
  <Component>
    <Component
      className="ins-c-expand-button"
      onClick={[Function]}
      variant="link"
    >
      Read more
    </Component>
  </Component>
</Component>
`;

exports[`Truncate component should render correctly block without length specified 1`] = `
<Component
  className="ins-c-truncate is-block"
>
  <Component>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </Component>
  <Component>
    <Component
      className="ins-c-expand-button"
      onClick={[Function]}
      variant="link"
    >
      Read more
    </Component>
  </Component>
</Component>
`;

exports[`Truncate component should render correctly inline clicking on expand toggles to collapse 1`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
      }
    }
    widget-type="InsightsTruncateInline"
  />
  <Component
    className="ins-c-collapse-button"
    onClick={[Function]}
    variant="link"
  >
    Custom collapse
  </Component>
</Fragment>
`;

exports[`Truncate component should render correctly inline clicking on expand toggles to collapse 2`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
      }
    }
    widget-type="InsightsTruncateInline"
  />
  <Component
    className="ins-c-collapse-button"
    onClick={[Function]}
    variant="link"
  >
    Custom collapse
  </Component>
</Fragment>
`;

exports[`Truncate component should render correctly inline custom button titles 1`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
      }
    }
    widget-type="InsightsTruncateInline"
  />
  <Component
    className="ins-c-collapse-button"
    onClick={[Function]}
    variant="link"
  >
    Custom collapse
  </Component>
</Fragment>
`;

exports[`Truncate component should render correctly inline custom button titles 2`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
      }
    }
    widget-type="InsightsTruncateInline"
  />
  <Component
    className="ins-c-collapse-button"
    onClick={[Function]}
    variant="link"
  >
    Custom collapse
  </Component>
</Fragment>
`;

exports[`Truncate component should render correctly inline custom expande button 1`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...",
      }
    }
    widget-type="InsightsTruncateInline"
  />
  <Component
    className="ins-c-expand-button"
    onClick={[Function]}
    variant="link"
  >
    Custom expand
  </Component>
</Fragment>
`;

exports[`Truncate component should render correctly inline custom expande button 2`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...",
      }
    }
    widget-type="InsightsTruncateInline"
  />
  <Component
    className="ins-c-expand-button"
    onClick={[Function]}
    variant="link"
  >
    Custom expand
  </Component>
</Fragment>
`;

exports[`Truncate component should render correctly inline when text length is less than user specified length 1`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
      }
    }
    widget-type="InsightsTruncateInline"
  />
</Fragment>
`;

exports[`Truncate component should render correctly inline with short length 1`] = `
<Component
  className="ins-c-truncate is-block"
>
  <Component>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lo...",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </Component>
  <Component>
    <Component
      className="ins-c-expand-button"
      onClick={[Function]}
      variant="link"
    >
      Read more
    </Component>
  </Component>
</Component>
`;

exports[`Truncate component should render correctly inline without length specified 1`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...",
      }
    }
    widget-type="InsightsTruncateInline"
  />
  <Component
    className="ins-c-expand-button"
    onClick={[Function]}
    variant="link"
  >
    Read more
  </Component>
</Fragment>
`;
